updating README and Website syntax

--- a/website/docs/events.mdx
+++ b/website/docs/events.mdx
@@ -3,9 +3,9 @@ sidebar_position: 5
 title: Events
 ---
 
-## onChartLoaded
+### `onChartLoaded`
 
-- Type: `(data: ChartResponse) => void`
+- Type: (data: [`ChartResponse`](/docs/data#chartresponse)) => void
 
 Callback fired when the chart is successfully loaded.
 
@@ -17,7 +17,7 @@ chartElementRef.onChartLoaded = (data) => {
 
 ---
 
-## onChartError
+### `onChartError`
 
 - Type: `() => void`
 
