--- a/website/docs/installation.mdx
+++ b/website/docs/installation.mdx
@@ -26,15 +26,15 @@ https://unpkg.com/prompt-chart@0.1.8/dist/promptChart.bundle.js
 
 ## Backend
 
-PromptChart requires a backend service to process prompts and return chart data. See the [Backend Examples](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples) for ready-to-use implementations in:
+[PromptChart](https://www.npmjs.com/package/prompt-chart) requires a backend service to process prompts and return chart data. See the [Backend Examples](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples) for ready-to-use implementations in:
 
-- [Node.js + Express](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/node/express)
-- [Python + Flask](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/python/flask)
-- [Python + FastAPI](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/python/fastapi)
+- [Node.js - Express](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/node/express)
+- [Python - Flask](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/python/flask)
+- [Python - FastAPI](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/python/fastapi)
 - [Next.js (App Router)](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/nextjs/app-router)
 - [Next.js (Pages Router)](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/nextjs/pages-router)
 - [SvelteKit](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/sveltekit)
-- [Java + Spring Boot](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/java/springboot)
+- [Java - Spring Boot](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/java/springboot)
 - [Go](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/go)
 - [.NET](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/dotnet)
 - [NestJS](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/node/nestjs)
