--- a/website/docs/styles.mdx
+++ b/website/docs/styles.mdx
@@ -3,9 +3,9 @@ sidebar_position: 6
 title: Styles
 ---
 
-## containerStyle
+### `containerStyle`
 
-- Type: `CSSStyleDeclaration`
+- Type: [`CSSStyleDeclaration`](https://webplatform.github.io/docs/css/cssom/CSSStyleDeclaration/CSSStyleDeclaration/)
 
 Apply inline styles to the chart container.
 
@@ -22,7 +22,7 @@ Apply inline styles to the chart container.
 
 ---
 
-## stateText
+### `stateText`
 
 - Type: \{`empty?: string`, `loading?: string`, `retry?: string`\}
 
