--- a/website/docs/connect.mdx
+++ b/website/docs/connect.mdx
@@ -3,7 +3,7 @@ sidebar_position: 2
 title: Connect
 ---
 
-## connect
+### `connect`
 
 - Type: \{`url?: string`, `method?: string`, `headers?: Record<string, string>`\}
 
@@ -21,7 +21,7 @@ Connection settings for the backend API.
 
 ---
 
-## prompt
+### `prompt`
 
 - Type: `string`
 
@@ -33,7 +33,7 @@ The natural language prompt to send to the backend.
 
 ---
 
-## autoFetch
+### `autoFetch`
 
 - Type: `boolean`
 
