--- a/website/docs/data.mdx
+++ b/website/docs/data.mdx
@@ -3,7 +3,7 @@ sidebar_position: 3
 title: Data
 ---
 
-## data
+### `data`
 
 - Type: [`ChartResponse`](#chartresponse) | [`ChartResponse[]`](#chartresponse)
 
@@ -23,7 +23,7 @@ Provide chart data directly to render without making an API call.
 
 ---
 
-## demo
+### `demo`
 
 - Type: `boolean`
 
