--- a/website/docs/installation.mdx
+++ b/website/docs/installation.mdx
@@ -38,3 +38,11 @@ https://unpkg.com/prompt-chart@0.1.8/dist/promptChart.bundle.js
 - [Go](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/go)
 - [.NET](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/dotnet)
 - [NestJS](https://github.com/OvidijusParsiunas/PromptChart/tree/main/examples/node/nestjs)
+
+## Coding with AI
+
+When coding with AI, use [llms.txt](https://github.com/OvidijusParsiunas/PromptChart/blob/main/llms.txt) as a reference:
+
+```
+"Use https://github.com/OvidijusParsiunas/PromptChart/blob/main/llms.txt to add a chat component to my website."
+```
